# select-hot-topic

./: .env.example  CLAUDE.md  README.md  history.json  history.py  main.py  modes.py  pyproject.toml  scorer.py
.claude/: settings.local.json
.github/workflows/: daily-topic.yml
.omc/: project-memory.json
.omc/sessions/: ad93f6e7-bf63-463a-b251-c9041e9002b7.json
.omc/state/: agent-replay-c8ea0de7-fad9-4446-992c-62109bc23d7a.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
sources/: __init__.py  anthropic_releases.py  geeknews.py  github_trending.py  hacker_news.py  reddit_claude.py  reddit_subs.py  youtube_search.py
